# scripts-cc

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.script_name}}/: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pylintrc  pyproject.toml
{{cookiecutter.script_name}}/tests/: test_{{cookiecutter.script_name}}.py
{{cookiecutter.script_name}}/{{cookiecutter.script_name}}/: utils.py
{{cookiecutter.script_name}}/{{cookiecutter.script_name}}/cli/: main.py
