[tool.poetry]
name = "{{cookiecutter.script_name}}"
version = "0.1.0"
description = "{{cookiecutter.script_description}}"
authors = ["CrossNox <ijmermet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.15.0"
bump2version = "^1.0.1"
flake8 = "^3.9.2"

[tool.poetry.scripts]
{{cookiecutter.script_name}} = "{{cookiecutter.script_name}}.cli.main:app()"

[tool.black]
line-length = 88

[tool.isort]
line_length=88
indent='    '
multi_line_output=3
length_sort=true
use_parentheses=true
include_trailing_comma=true
force_sort_within_sections=true
known_first_party="{{cookiecutter.script_name}}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
